src/main/java/org/twc/minijavacompiler/zmipsparser/zmips.jj
options {
  JAVA_UNICODE_ESCAPE = true;
  STATIC = false;
}

PARSER_BEGIN(ZMIPSParser)
    package org.twc.minijavacompiler.zmipsparser;
    public class ZMIPSParser {}
PARSER_END(ZMIPSParser)

SKIP : /* WHITE SPACE */
{
  " "
| "\t"
| "\n"
| "\r"
| "\f"
}

SPECIAL_TOKEN : /* COMMENTS */
{
  <SINGLE_LINE_COMMENT: "//" (~["\n","\r"])* ("\n"|"\r"|"\r\n")>
| <ASM_COMMENT: ";" (~["\n","\r"])* ("\n"|"\r"|"\r\n")>
| <MIPS_COMMENT: "#" (~["\n","\r"])* ("\n"|"\r"|"\r\n")>
| <FORMAL_COMMENT: "/**" (~["*"])* "*" ("*" | (~["*","/"] (~["*"])* "*"))* "/">
| <MULTI_LINE_COMMENT: "/*" (~["*"])* "*" ("*" | (~["*","/"] (~["*"])* "*"))* "/">
}

TOKEN :
{
// Special Instructions
  < print: "print" >
| < answer: "answer" >
| < pubread: "pubread" >
| < secread: "secread" >
| < pubseek: "pubseek" >
| < secseek: "secseek" >
| < lw: "lw" >
| < sw: "sw" >
// Jump Instructions
| < j: "j" >
| < cjmp: "cjmp" >
| < cnjmp: "cnjmp" >
// Instructions that only use Dest and Arg2OrImmidiate
| < move : "move" >
| < not : "not" >
// Instructions that All three registers
| < and : "and" >
| < or : "or" >
| < xor : "xor" >
| < add: "add" >
| < sub: "sub" >
| < mult: "mult" >
| < sll: "sll" >
| < srl: "srl" >
// Comparisons
| < cmpe: "cmpe" >
| < cmpne: "cmpne" >
| < cmpg: "cmpg" >
| < cmpge: "cmpge" >
// for registers
| < r: "$r" >
}

TOKEN : /* LITERALS */
{
  < INTEGER_LITERAL: ( ["1"-"9"] (["0"-"9"])* | "0" ) >
}

TOKEN : /* LITERALS */
{
    < REGISTER:
        ( "$r" ["1"-"9"] (["0"-"9"])* | "$r0"
        | "$zero"
        | "$ra"
        | "$sp"
        | "$hp"
        | "$a" ["1"-"4"] (["0"-"4"])* | "$a0"
        | "$v0"
        | "$v1"
        | "0xffffffffffffffff"
        )
    >
}

TOKEN : /* IDENTIFIERS */
{
  < IDENTIFIER: "__" <LETTER> (<LETTER>|<DIGIT>)* "__" >
|
  < #LETTER:
      [
       "\u0024",
       "\u0041"-"\u005a",
       "\u005f",
       "\u0061"-"\u007a",
       "\u00c0"-"\u00d6",
       "\u00d8"-"\u00f6",
       "\u00f8"-"\u00ff",
       "\u0100"-"\u1fff",
       "\u3040"-"\u318f",
       "\u3300"-"\u337f",
       "\u3400"-"\u3d2d",
       "\u4e00"-"\u9fff",
       "\uf900"-"\ufaff"
      ]
  >
|
  < #DIGIT:
      [
       "\u0030"-"\u0039",
       "\u0660"-"\u0669",
       "\u06f0"-"\u06f9",
       "\u0966"-"\u096f",
       "\u09e6"-"\u09ef",
       "\u0a66"-"\u0a6f",
       "\u0ae6"-"\u0aef",
       "\u0b66"-"\u0b6f",
       "\u0be7"-"\u0bef",
       "\u0c66"-"\u0c6f",
       "\u0ce6"-"\u0cef",
       "\u0d66"-"\u0d6f",
       "\u0e50"-"\u0e59",
       "\u0ed0"-"\u0ed9",
       "\u1040"-"\u1049"
      ]
  >
}

/***********************************
 * The ZMIPS Grammar Starts Here *
 ***********************************/

void Goal() :
{}
{
  ZMIPSProg() <EOF>
}

void ZMIPSProg() :
{}
{
  ( Stmt() )*
}

void Stmt() :
{}
{
Label()
| TwoRegInstr()
| ThreeRegInstr()
| JmpStmts()
| ComparisonStmts()
| LwStmt()
| SwStmt()
| PrintStmt()
| AnswerStmt()
| PubReadStmt()
| SecReadStmt()
// | PubSeekStmt()
// | SecSeekStmt()
}

void JmpStmts() :
{}
{
  JmpOps() SimpleExp()
}

void JmpOps():
{}
{
  "j"
| "jr"
| "cjmp"
| "cnjmp"
}

void ComparisonStmts() :
{}
{
  ComparisonOps() Register() "," SimpleExp()
}

void ComparisonOps():
{}
{
  "cmpe"
| "cmpg"
| "cmpge"
}

void LwStmt() :
{}
{
   "lw" Register() "," SimpleExp() "(" SimpleExp() ")"
}

void SwStmt() :
{}
{
   "sw" Register() "," SimpleExp() "(" SimpleExp() ")"
}


void TwoRegInstr() :
{}
{
  TwoRegInstrOp() Register() "," SimpleExp()
}

void TwoRegInstrOp() :
{}
{
  "move"
| "la"
| "not"
}

void ThreeRegInstr() :
{}
{
  ThreeRegInstrOp() Register() "," Register() "," SimpleExp()
}

void ThreeRegInstrOp() :
{}
{
  "and"
| "or"
| "xor"
| "add"
| "sub"
| "mult"
| "sll"
| "srl"
}

void PrintStmt() :
{}
{
  "print" SimpleExp()
}

void AnswerStmt() :
{}
{
  "answer" SimpleExp()
}

void PubReadStmt() :
{}
{
  "pubread" Register()
}

// void PubSeekStmt() :
// {}
// {
//   "pubseek" Register() "," SimpleExp() "," SimpleExp()
// }

void SecReadStmt() :
{}
{
  "secread" Register()
}

// void SecSeekStmt() :
// {}
// {
//   "secseek" Register() "," SimpleExp() "," SimpleExp()
// }

void SimpleExp() :
{}
{
  Register()
| IntegerLiteral()
| Label()
}

void Register() :
{}
{
   <REGISTER>
}

void IntegerLiteral() :
{}
{
  <INTEGER_LITERAL>
}

void Label() :
{}
{
  <IDENTIFIER>
}
